# freshcache-py

./: .gitignore  CONSISTENCY.md  DESIGN.md  Justfile  README.md  SPIKE.md  pyproject.toml  pyrightconfig.json
bench/: conftest.py  test_decorators.py  test_hashkey.py  test_memory.py  test_singleflight.py  test_typed.py
src/freshcache/: __init__.py  async_singleflight.py  async_typed.py  codecs.py  decorators.py  envelope.py  info.py  memory.py  null.py  protocols.py  singleflight.py  typed.py
src/freshcache/adapters/: __init__.py  aredis.py  cachebox.py  cachetools.py  redis.py
tests/: test_adapters_local.py  test_adapters_redis.py  test_codecs.py  test_decorators.py  test_memory.py  test_singleflight.py  test_typed.py
tests/typecheck/: test_pep696.py  test_types.py  test_types_negative.py
